--- a/coding.html
+++ b/coding.html
@@ -11,7 +11,10 @@
     <div id="wrapper">
         <div class="container">
             <nav>
-                <ul>
+                <div class="logo">
+                    <h4>Isabel Estes</h4>
+                </div>
+                <ul class="nav-links">
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="music.html">MUSIC</a></li>
@@ -20,7 +23,15 @@
                     <li><a href="gallery.html">GALLERY</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
+
+                <div class="burger">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
             </nav>
+
+            <script src="app.js"></script>
         </div>
 
         <header><h1><a href="index.html">Isabel Estes</a></h1></header>
