--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <div id="wrapper">
         <div class="container">
             <nav>
-                <ul>
+                <div class="logo">
+                    <h4>Isabel Estes</h4>
+                </div>
+                <ul class="nav-links">
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="music.html">MUSIC</a></li>
@@ -22,7 +25,15 @@
                     <li><a href="gallery.html">GALLERY</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
+
+                <div class="burger">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
             </nav>
+
+            <script src="app.js"></script>
         </div>
 
         <header><h1><a href="index.html">Isabel Estes</a></h1></header>
@@ -31,7 +42,7 @@
             <p>Isabel Estes is a vocalist from Phoenix, Arizona, currently residing in Tempe,
             Arizona. She is an undergraduate student at Barrett, the Honors College at Arizona
             State University working towards a Bachelor's in Digital Culture. Isabel is
-            passionate about music and technology, where they can lead us in the future.
+            passionate about music and technology and where they can lead us in the future.
             Please contact if you'd like to collaborate on a project!</p>
         </main>
 
