--- a/gallery.html
+++ b/gallery.html
@@ -6,37 +6,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
     <link href="resumeproject.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet">
     <title>Gallery - Isabel Estes</title>
 </head>
+
 <body>
-    <div class="container2">
-        <div class="image-gallery">
-            <a href="images/img-1" class="img-1">
-                <i class="icon ion-md-expand"></i>
-            </a>
-            <a href="images/img-2" class="img-2">
-                <i class="icon ion-md-expand"></i>
-            </a>
-            <a href="images/img-3" class="img-3">
-                <i class="icon ion-md-expand"></i>
-            </a>
-            <a href="images/img-4" class="img-4">
-                <i class="icon ion-md-expand"></i>
-            </a>
-            <a href="images/img-5" class="img-5">
-                <i class="icon ion-md-expand"></i>
-            </a>
-            <a href="images/img-6" class="img-6">
-                <i class="icon ion-md-expand"></i>
-            </a>
-            <a href="images/img-7" class="img-7">
-                <i class="icon ion-md-expand"></i>
-            </a>
-            <a href="images/img-8" class="img-8">
-                <i class="icon ion-md-expand"></i>
-            </a>
+    <div id="wrapper">
+        <div class="container">
+            <nav>
+                <div class="logo">
+                    <h4>Isabel Estes</h4>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+                    <li><a href="music.html">MUSIC</a></li>
+                    <li><a href="coding.html">CODING</a></li>
+                    <li><a href="currentprojects.html">CURRENT PROJECTS</a></li>
+                    <li><a href="gallery.html">GALLERY</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                </ul>
+
+                <div class="burger">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
+            </nav>
+
+            <script src="app.js"></script>
         </div>
+            <h2>Image Gallery</h2>
+        <div class="container2">
+            <div class="image-gallery">
+                <a href="images/img-1" class="img-1">
+                    <i class="icon ion-md-expand"></i>
+                </a>
+                <a href="images/img-2" class="img-2">
+                    <i class="icon ion-md-expand"></i>
+                </a>
+                <a href="images/img-3" class="img-3">
+                    <i class="icon ion-md-expand"></i>
+                </a>
+                <a href="images/img-4" class="img-4">
+                    <i class="icon ion-md-expand"></i>
+                </a>
+                <a href="images/img-5" class="img-5">
+                    <i class="icon ion-md-expand"></i>
+                </a>
+                <a href="images/img-6" class="img-6">
+                    <i class="icon ion-md-expand"></i>
+                </a>
+                <a href="images/img-7" class="img-7">
+                    <i class="icon ion-md-expand"></i>
+                </a>
+                <a href="images/img-8" class="img-8">
+                    <i class="icon ion-md-expand"></i>
+                </a>
+            </div>
+        </div>
+        <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
     </div>
-    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
 </body>
 </html>
